# agent-watch-antler

./: .gitignore  Readme.md  pyproject.toml
client/chat-agent-client/: package-lock.json  package.json
src/: main.py
src/api/: agent.py
